prototype api list pelatihan struktural
