# services/kepegawaian/docs/openapi.yaml
@@ -7,6 +7,7 @@ servers:
   - url: http://localhost:8000
 tags:
   - name: Data Pribadi
+  - name: Pelatihan Struktural
   - name: Pendidikan Formal
 paths:
   /data-pribadi:
@@ -119,6 +120,44 @@ paths:
                         type: string
                       gelar_belakang:
                         type: string
+  /pelatihan-struktural:
+    get:
+      tags:
+        - Pelatihan Struktural
+      summary: Lihat daftar pelatihan struktural.
+      description: >-
+        Lihat daftar pelatihan struktural dari user yang login, urut
+        berdasarkan tanggal.
+      operationId: listPelatihanStruktural
+      parameters:
+        - $ref: "#/components/parameters/authRequired"
+        - $ref: "#/components/parameters/limit"
+        - $ref: "#/components/parameters/offset"
+      responses:
+        "200":
+          description: Sukses.
+          content:
+            application/json:
+              schema:
+                additionalProperties: false
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      additionalProperties: false
+                      properties:
+                        nama_diklat:
+                          type: string
+                        nomor:
+                          type: string
+                        tanggal:
+                          type: string
+                          format: date
+                        tahun:
+                          type: integer
+                  meta:
+                    $ref: "#/components/schemas/metaPagination"
   /pendidikan-formal:
     get:
       tags:
